end_to_end_investigation option
