# src/main.py
@@ -5,9 +5,11 @@ import os
 from dotenv import load_dotenv
 
 from src import app, connex_app
+from src.investigations import start_investigation
+from src.data_acquisition import execute_data_acquisition
 from src.products_processing import run_products_investigation
 from src.reviews_processing import run_reviews_investigation
-from src.investigations import start_investigation
+from src.run_investigation import run_end_to_end_investigation
 
 
 def api_start_investigation():
@@ -30,6 +32,26 @@ def api_start_investigation():
         return jsonify({"error": str(e)}), 500
 
 
+def api_run_data_acquisition():
+    """
+    Initiates data acquisition based on the provided list of ASINs.
+    """
+    data = request.json
+    asins = data.get('asins')
+    
+    if not asins:
+        return jsonify({"error": "asins are required"}), 400
+
+    try:
+        result = execute_data_acquisition(asins)
+        if result:
+            return jsonify({"message": "Data acquisition completed successfully"}), 200
+        else:
+            return jsonify({"error": "Data acquisition failed"}), 500
+    except Exception as e:
+        return jsonify({"error": str(e)}), 500
+
+
 def api_run_products_investigation():
     """
     Initiates a product investigation based on the provided investigation ID and credential path.
@@ -45,7 +67,8 @@ def api_run_products_investigation():
         return jsonify({"message": "Investigation completed successfully"}), 200
     except Exception as e:
         return jsonify({"error": str(e)}), 500
-    
+
+
 def api_run_reviews_investigation():
     """
     Initiates a reviews investigation based on the provided investigation ID and credential path.
@@ -61,6 +84,29 @@ def api_run_reviews_investigation():
         return jsonify({"message": "Reviews investigation completed successfully"}), 200
     except Exception as e:
         return jsonify({"error": str(e)}), 500
+
+
+def api_run_end_to_end_investigation():
+    """
+    Initiates an end-to-end investigation based on the provided user ID and list of ASINs.
+    """
+    data = request.json
+    user_id = data.get('user_id')
+    asins = data.get('asins')
+    
+    if not user_id or not asins:
+        return jsonify({"error": "user_id and asins are required"}), 400
+
+    try:
+        result = run_end_to_end_investigation(data)
+        if result:
+            return jsonify({"message": "End-to-end investigation completed successfully"}), 200
+        else:
+            return jsonify({"error": "End-to-end investigation failed"}), 500
+    except Exception as e:
+        return jsonify({"error": str(e)}), 500
+
+
 
 if __name__ == "__main__":
     load_dotenv()
